--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     compile 'com.squareup.picasso:picasso:2.71828'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.airbnb.android:lottie:2.2.0'
+
 
     testCompile 'junit:junit:4.12'
 }
